--- a/.gitmodules
+++ b/.gitmodules
@@ -58,3 +58,6 @@
 [submodule "bundle/vim-pig"]
 	path = bundle/vim-pig
 	url = https://github.com/vim-scripts/pig.vim.git
+[submodule "bundle/vim-netrw"]
+	path = bundle/vim-netrw
+	url = https://github.com/vim-scripts/netrw.vim
