--- a/.gitmodules
+++ b/.gitmodules
@@ -13,9 +13,6 @@
 [submodule "bundle/vim-repeat"]
 	path = bundle/vim-repeat
 	url = git://github.com/tpope/vim-repeat.git
-[submodule "bundle/snipmate"]
-	path = bundle/snipmate
-	url = http://github.com/msanders/snipmate.vim.git
 [submodule "bundle/vim-rooter"]
 	path = bundle/vim-rooter
 	url = http://github.com/airblade/vim-rooter.git
@@ -61,3 +58,6 @@
 [submodule "bundle/mustache"]
 	path = bundle/mustache
 	url = git://github.com/mustache/vim-mustache-handlebars.git
+[submodule "bundle/vim-css3"]
+	path = bundle/vim-css3
+	url = https://github.com/hail2u/vim-css3-syntax.git
