--- a/.gitmodules
+++ b/.gitmodules
@@ -58,9 +58,9 @@
 [submodule "bundle/mustache"]
 	path = bundle/mustache
 	url = git://github.com/mustache/vim-mustache-handlebars.git
-[submodule "bundle/vim-css3"]
-	path = bundle/vim-css3
-	url = https://github.com/hail2u/vim-css3-syntax.git
 [submodule "bundle/vim-json"]
 	path = bundle/vim-json
 	url = https://github.com/jakar/vim-json.git
+[submodule "bundle/ctrlp"]
+	path = bundle/ctrlp
+	url = https://github.com/kien/ctrlp.vim.git
